--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <title>Arnab's Resume</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
-    <a href="ArnabSadhukhan_Resume_2025-Sep.pdf" class="image fit"><img src="images/marr_pic.jpg" alt=""></a>
+    <a href="ArnabSadhukhan_Resume_2025-Sep.pdf" class="image fit"></a>
   </body>
 </html>
