--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 </head>
   <body style="width:100%; height:100%; margin:0;">
     <a href="ArnabSadhukhan_Resume_2025-Sep.pdf" class="image fit"></a>
+    <embed src="https://sumanbogati.github.io/sample.pdf" width="600px" height="500px" />
   </body>
 </html>
