--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <title>Arnab's Resume</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
-    <embed src="https://github.com/Official-ArnabS/official-arnabs.github.io/blob/main/ArnabSadhukhan_Resume_2025-Sep.pdf" width="600px" height="500px" />
+    <embed src="https://official-arnabs.github.io/ArnabSadhukhan_Resume_2025-Sep.pdf" width="600px" height="500px" />
   </body>
 </html>
