--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <title>Arnab's Resume</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
-    <embed src="https://official-arnabs.github.io/ArnabSadhukhan_Resume_2025-Sep.pdf"/>
+    <iframe src="https://official-arnabs.github.io/ArnabSadhukhan_Resume_2025-Sep.pdf" style="min-height:100vh;width:100%" frameborder="0"></iframe>
   </body>
 </html>
