Updated index page title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" style="width:100%; height:100%;">
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
-  <title>Arnab's Resume-Certified Pega Developer-CSSA-CSA</title>
+  <title>Arnab's Resume-Pega Dev-CSSA-CSA</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
     <iframe src="https://official-arnabs.github.io/docs/ArnabSadhukhan_Resume_2025.pdf" style="min-height:100vh;width:100%" frameborder="0"></iframe>
